Add TransportWithMessageCredential to WCF

--- a/WcfWebClient/Web.config
+++ b/WcfWebClient/Web.config
@@ -78,16 +78,15 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_ICourseService" />
-        <binding name="BasicHttpsBinding_ICourseService">
-          <security mode="Transport" />
+        <binding name="DefaultEndpoint">
+          <security mode="TransportWithMessageCredential" />
         </binding>
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://webservices-demo.azurewebsites.net/Services/CourseService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICourseService"
-        contract="CourseReference.ICourseService" name="BasicHttpBinding_ICourseService" />      
+      <endpoint address="https://webservices-demo.azurewebsites.net/Services/CourseService.svc/CourseService.svc"
+        binding="basicHttpBinding" bindingConfiguration="DefaultEndpoint"
+        contract="CourseReference.ICourseService" name="DefaultEndpoint" />
     </client>
   </system.serviceModel>
 </configuration>
