--- a/WCFDemo/WCFDemo.csproj
+++ b/WCFDemo/WCFDemo.csproj
@@ -49,6 +49,8 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.IdentityModel" />
+    <Reference Include="System.IdentityModel.Selectors" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -93,6 +95,7 @@
       <DependentUpon>UniversityModels.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceAuthenticator.cs" />
     <Compile Include="Services\CourseService.svc.cs">
       <DependentUpon>CourseService.svc</DependentUpon>
     </Compile>
