--- a/WCFDemo/Web.config
+++ b/WCFDemo/Web.config
@@ -4,26 +4,54 @@
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
+
   <system.serviceModel>
+
     <behaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false" />
+        <behavior name="DefaultBehavior">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceCredentials>
+            <userNameAuthentication userNamePasswordValidationMode="Custom" customUserNamePasswordValidatorType="WCFDemo.ServiceAuthenticator, WCFDemo" />
+          </serviceCredentials>
         </behavior>
       </serviceBehaviors>
     </behaviors>
+
+    <bindings>
+      <basicHttpBinding>
+        <binding name="DefaultBinding">
+          <security mode="TransportWithMessageCredential">
+            <message clientCredentialType="UserName"/>
+          </security>
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+
+    <services>
+      <service name="WCFDemo.Services.CourseService" behaviorConfiguration="DefaultBehavior">
+        <endpoint contract="IMetadataExchange" binding="mexHttpBinding" address="mex" />
+        <endpoint address="/CourseService.svc" binding="basicHttpBinding"
+                  bindingConfiguration="DefaultBinding"
+                  name="DefaultEndpoint" contract="WCFDemo.Services.ICourseService" />
+      </service>
+    </services>
+
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
+      <add binding="basicHttpsBinding" scheme="https" />
+    </protocolMapping>
+
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+
+
   </system.serviceModel>
+
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
     <!--
@@ -34,9 +62,9 @@
   </system.webServer>
 
   <connectionStrings>
-    
-  <add name="UniversityContext" connectionString="metadata=res://*/UniversityModels.csdl|res://*/UniversityModels.ssdl|res://*/UniversityModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=University-Application;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  
+
+    <add name="UniversityContext" connectionString="metadata=res://*/UniversityModels.csdl|res://*/UniversityModels.ssdl|res://*/UniversityModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=University-Application;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
 
 </configuration>
