--- a/WCFDemo/Web.config
+++ b/WCFDemo/Web.config
@@ -25,19 +25,19 @@
     </behaviors>
 
     <bindings>
-      <basicHttpBinding>
+      <wsHttpBinding>
         <binding name="DefaultBinding">
           <security mode="TransportWithMessageCredential">
             <message clientCredentialType="UserName"/>
           </security>
         </binding>
-      </basicHttpBinding>
+      </wsHttpBinding>
     </bindings>
 
     <services>
       <service name="WCFDemo.Services.CourseService" behaviorConfiguration="DefaultBehavior">
         <endpoint contract="IMetadataExchange" binding="mexHttpBinding" address="mex" />
-        <endpoint address="/CourseService.svc" binding="basicHttpBinding"
+        <endpoint address="/CourseService.svc" binding="wsHttpBinding"
                   bindingConfiguration="DefaultBinding"
                   name="DefaultEndpoint" contract="WCFDemo.Services.ICourseService" />
       </service>
