--- a/WcfWebClient/Web.config
+++ b/WcfWebClient/Web.config
@@ -77,15 +77,18 @@
   </system.codedom>
   <system.serviceModel>
     <bindings>
-      <basicHttpBinding>
+      <wsHttpBinding>
         <binding name="DefaultEndpoint">
-          <security mode="TransportWithMessageCredential" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" />
+            <message clientCredentialType="UserName" />
+          </security>
         </binding>
-      </basicHttpBinding>
+      </wsHttpBinding>
     </bindings>
     <client>
       <endpoint address="https://webservices-demo.azurewebsites.net/Services/CourseService.svc/CourseService.svc"
-        binding="basicHttpBinding" bindingConfiguration="DefaultEndpoint"
+        binding="wsHttpBinding" bindingConfiguration="DefaultEndpoint"
         contract="CourseReference.ICourseService" name="DefaultEndpoint" />
     </client>
   </system.serviceModel>
